k8s/sample-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcant-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: www.demo.com
      http:
        paths:
          - path: /v1/account-balance
            pathType: Prefix
            backend:
              service:
                name: account-balance-service
                port:
                  number: 8082
